--- a/controlerSdis/app/src/main/AndroidManifest.xml
+++ b/controlerSdis/app/src/main/AndroidManifest.xml
@@ -5,9 +5,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
 
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/grey"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
